--- a/style.css
+++ b/style.css
@@ -1,76 +1,149 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;1,700&display=swap');
+
 :root {
-    --red: #EF5350;
-    --pink: #EC407A;
-    --purple: #AB47BC;
-    --blue: #42A5F5;
-    --cyan: #26C6DA;
-    --teal: #26A69A;
-    --green: #66BB6A;
-    --light_green: #9CCC65;
-    --lime: #D4E157;
-    --yellow: #FFEE58;
-    --amber: #FFCA28;
-    --orange: #FFA726;
-    --brown: #8D6E63;
-    --blue-grey: #78909C;
-    --grey :#BDBDBD ;
-    --black: #000000;
+    --white: #fff;
+    --ash: #eee;
+    --content: #333;
+    --pastelGreen: #1de9b6;
+    --orange: #FB8C00;
+    --skyBlue: #29B6F6;
+    --blue: #2196F3;
+    --violet: #7C4DFF;
+    --fiolek: #AB47BC;
+    --magenta: #F50057;
+    --gold: #FFC107;
+}
+* {
+    box-sizing: border-box;
+}
+html {
+    font-size: 62.5%;
 }
 body {
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    color: var(--content);
 }
-.page-wrapper {
-    width: 960px;   
-    margin: 0 auto;    
-    text-align: center;
-}
-section {
-    width: 100%;
-}
+/* class color */
+.content { background-color: var(--content); }
+.pastel-green { background-color: var(--pastelGreen); }
+.orange { background-color: var(--orange); }
+.sky-blue { background-color: var(--skyBlue); }
+.blue { background-color: var(--blue); }
+.violet { background-color: var(--violet); }
+.fiolek { background-color: var(--fiolek); }
+.magenta { background-color: var(--magenta); }
+.gold { background-color: var(--gold); }
+
 .page-title {
-    
+    font-size: 3rem;
+    font-weight: 700;
+    text-align: center;
+    margin: 20px 0 50px;
 }
 .section-title {
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+.section-text {
+    font-size: 1.2rem;
+    font-weight: 400;
+}
 
+.page-nav {
+    display: flex;
+    justify-content: flex-end;
+    height: 50px;
+    margin: 10px;
+}
+.page-nav ul {
+    padding: 0;
+    margin: 0;
+    list-style-type: none;
+    display: flex;
+}
+.page-nav li  {
+    margin-left: 10px;
+}
+.page-nav a {
+    display: block;
+    padding: 15px 50px;
+    background-color: var(--fiolek);
+    color: var(--white);
+    border-radius: 3px;
+    text-decoration: none;
+    cursor: pointer;
+    font-size: 1.6rem;
+    font-weight: 700;
+    transition: background-color 0.5s ease-in-out;
+}
+.page-nav a:hover {
+    background-color: #9A40A9;
+}
+
+.box-groups {
+    display: flex;
+    margin-bottom: 100px;
+}
+.box-group {
+    flex-grow: 1;
 }
 .box-wrapper { 
-    display: flex;
+    display: flex; /* parent */
     width: 100%;
+    height: 100px;
+    background-color: var(--ash);
+    counter-reset: iteration;
+    border-right: 1px solid var(--content);
+}
+.box-wrapper_column {
+    height: 400px;
+}
+.box-wrapper_sm {
+    width: 200px;
+}
+.box-wrapper_md {
+    width: 400px;
 }
 .box {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
+    color: var(--white);  
+    text-align: center;
+    line-height: 50px;
 }
-.red {
-    background-color: var(--red);
+.box::after {
+    content: counter(iteration);
+    counter-increment: iteration;
+    font-size: 1.6rem;
+    font-weight: 700;
 }
-.pink {
-    background-color: var(--pink);
-}
-.purple {
-    background-color: var(--purple);
-}
-.blue {
-    background-color: var(--blue);
-}
-.cyan {
-    background-color: var(--cyan);
-}
-.teal {
-    background-color: var(--teal);
-}
-.green {
-    background-color: var(--green);
-}
-.light_green {
-    background-color: var(--light_green);
-}
-.justify-content-start {
-    justify-content: flex-start;
-}
-.justify-content-end {
-    justify-content: flex-end;
-}
-.justify-content-center {
-    justify-content: center;
-}
+
+/* directions - parent */
+.flex-direction-row { flex-direction: row; }
+.flex-direction-row-reverse { flex-direction: row-reverse; }
+.flex-direction-column { flex-direction: column; }
+.flex-direction-column-revers { flex-direction: column-reverse; }
+
+/* justify for main axis - parent */
+.justify-content-start { justify-content: flex-start; }
+.justify-content-end { justify-content: flex-end; }
+.justify-content-center { justify-content: center; }
+.justify-content-space-between { justify-content: space-between; }
+.justify-content-space-around { justify-content: space-around; }
+.justify-content-space-evenly { justify-content: space-evenly; }
+
+/* aligment for cross axis - parent */
+.align-item-start { align-items: flex-start;}
+.align-item-end { align-items: flex-end;}
+.align-item-center { align-items: center;}
+
+/* wrap too next line - parent (wrap - zwijanie, czy zwijamy do kolejnej lini)  */
+.flex-nowrap { flex-wrap: nowrap; }
+.flex-wrap { flex-wrap: wrap; }
+
+/* self flex - child */
+.flex-shrink-true { flex-shrink: 1; }
+.flex-shrink-false { flex-shrink: 0; }
+.flex-grow-true { flex-grow: 1; }
+.flex-grow-false { flex-grow: 0; }
